--- a/css/main.css
+++ b/css/main.css
@@ -18,27 +18,34 @@ img{
     max-width: 100%;
 }
 
-//.wrapper{
-    max-width: 1000px;
-    margin: 0 auto;
-
+body {
+    font-family: 'Lato', sans-serif;
 }
 
 .navbar{
-
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+    top:0;
+    left:0;
+    width: 100%;
     position: fixed;
     z-index: 1;
     background-color: white;
+    box-shadow: 0 6px 6px -6px #999;
 }
 
 .navbar .navigation {
     list-style-type: none;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     margin: 0;
     padding: 0;
+
+    -webkit-box-align: center;
+
+    -webkit-align-items: center;
+
+    -ms-flex-align: center;
 
     align-items: center;
 
@@ -46,12 +53,24 @@ img{
 
 .navbar .navigation li {
 
+    -webkit-box-flex:1;
+
+    -webkit-flex:1;
+
+    -ms-flex:1;
+
     flex:1;
 
 }
 
 .navbar .navigation .logo-text{
-    flex: 3;
+    -webkit-box-flex: 4;
+    -webkit-flex: 4;
+    -ms-flex: 4;
+    flex: 4;
+    padding-left: 0.5em;
+     margin-top: 0.05em;
+
 }
 
 .navbar .navigation li a {
@@ -67,20 +86,27 @@ img{
 
 }
 
+.navbar .navigation li a:hover{
+    border-bottom: 1px solid black;
+    border-bottom-width: thin;
+
+}
+
 .bird-box{
+    margin-top: 82.5px;
     position: relative;
     overflow: hidden;
     height: 600px;
     background: url('/images/bird-bg.jpg');
     background-attachment: fixed;
     background-position: top center;
-    background-size: auto 600px;
+    background-size: auto 682.5px;
 }
 
 .logo{
     position: absolute;
     top: 50%;
-    margin-top: -50px
+    margin-top: -50px;
 
     width: 100%;
 
@@ -136,9 +162,11 @@ img{
     //border-radius: 80%;
     -webkit-box-align: center;
     -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
